<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Time tracking</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_em">Time tracking</string>
    <string name="title_activity_emp">Time tracking</string>
    <string name="add_emp">Add employee</string>
    <string name="name">First Name</string>
    <string name="surname">Last Name</string>
    <string name="title_activity_add">Time tracking</string>
    <string name="title_activity_add_em">Time tracking</string>
    <string name="title_activity_list_time">Time tracking</string>
    <string name="add_manager">Add manager</string>
    <string name="select_manager">Select manager</string>
    <string name="add">Add</string>
    <string name="select">Select</string>
    <string name="f_name">Full name</string>
    <string name="position">Position</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="time_arr">Arrival time</string>
    <string name="time_dep">Departure time</string>
    <string name="list_of_emp">List of employees</string>

</resources>
